# frameMaker

./: .gitignore  LICENSE  README.md  build.spec  colorpick.py  commit_message.txt  main.py  pyproject.toml  requirements.txt  run_pywebview.py  run_streamlit.py
.github/workflows/: pages.yml  pytest.yml
LICENSES/: pillow-LICENSE  python-dotenv-LICENSE
html/: index.html  robots.txt  sitemap.xml
html/js/: func.js
src/: FrameMaker.py  ImageHandler.py  WebviewInterface.py  colorpick.py  constants.py
tests/: test_FrameMaker.py  test_ImageHandler.py
tests/specification/: generate_test_spec.py  test_specification_FrameMaker.md  test_specification_ImageHandler.md
tests/web/: conftest.py  test_browser_only_web.py
